[Reinforcement] update config and create reinforcement py

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,8 @@
 DATASET_PATH=dataset/dataset-1.csv
 SIMULATION_DAYS=7300
 STANDARD_UNIT=20
+LOAD_PRODUCT_TIME=0.25
+
+[REINFORCEMENT]
+REPEAT_TIME=100000
+RANDOM_THRESHOLD=0.7
