--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ DATASET_PATH=dataset/dataset-1.csv
 SIMULATION_DAYS=7300
 STANDARD_UNIT=20
 LOAD_PRODUCT_TIME=0.25
+DEMAND_GROWTH_PERIOD=30
 
 [REINFORCEMENT]
 REPEAT_TIME=100000
