--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
 [GLOBAL]
 DATASET_PATH=dataset/dataset-1.csv
+SOLUTION_OUTPUT=dataset8_solution.csv
+EQUIPMENT_OUTPUT=dataset8_warehouse_input.csv
 SIMULATION_DAYS=7300
 STANDARD_UNIT=20
+INITIAL_WAREHOUSE_SIZE=60
 LOAD_PRODUCT_TIME=0.25
 DEMAND_GROWTH_PERIOD=30
 
